<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".MainActivity">

    <ImageView
            android:id="@+id/icon_cost_of_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/store_mall_directory_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cost_of_service_layout"
            app:layout_constraintBottom_toBottomOf="@id/cost_of_service_layout" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cost_of_service_layout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintStart_toEndOf="@+id/icon_cost_of_service"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="26dp"
            android:hint="@string/cost_of_service_hint"
    >
    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cost_of_service"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"
            android:minHeight="48dp"
            android:textSize="@dimen/TextFontSizePrim"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
            android:id="@+id/icon_do_you_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/room_service_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/like_service"
            app:layout_constraintBottom_toBottomOf="@id/like_service" />

    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/like_service"
            android:text="@string/likeService_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="56dp"
            app:layout_constraintTop_toBottomOf="@id/cost_of_service_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="@dimen/TextFontSizeSec"
            android:layout_marginTop="@dimen/MarginBetweenFields"
            android:layout_marginStart="26dp"
    />

    <RadioGroup
            android:id="@+id/tip_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/like_service"
            app:layout_constraintTop_toBottomOf="@id/like_service"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:checkedButton="@id/option_twenty_percent"
    >
        <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/option_twenty_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exelent_20"
                android:textSize="@dimen/TextFontSizePrim"
        />

        <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/option_ten_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_10"
                android:textSize="@dimen/TextFontSizePrim"
                android:layout_marginTop="@dimen/MarginBetweenFields"
        />

        <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/option_five_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/can_be_better_5"
                android:textSize="@dimen/TextFontSizePrim"
                android:layout_marginTop="@dimen/MarginBetweenFields"
        />
    </RadioGroup>

    <ImageView
            android:id="@+id/icon_should_round"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/room_service_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/round_up_switch"
            app:layout_constraintBottom_toBottomOf="@id/round_up_switch" />

    <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/round_up_switch"
            app:layout_constraintStart_toStartOf="@id/tip_options"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tip_options"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/should_i_round"
            android:layout_marginTop="@dimen/MarginBetweenFields"
            android:textSize="@dimen/TextFontSizePrim"
    />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/button_calculate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/MarginBetweenFields"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/round_up_switch"
            android:text="@string/calculate_button_content"
            android:textSize="@dimen/TextFontSizePrim"
    />

    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tip_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/button_calculate"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/MarginBetweenFields"
            android:textSize="@dimen/TextFontSizePrim"
            android:hint="@string/calculated_result_hint"
    />

    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/footer"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/Author"
            android:textAlignment="center"
    />

</androidx.constraintlayout.widget.ConstraintLayout>